Implemented map service, built basic map-page nad routes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
                 <li><b><a class="article-link" routerLink="/organization">Groups</a></b></li>
                 <li><b><a class="article-link" routerLink="/creature">Bestiary</a></b></li>
                 <li><b><a class="article-link" routerLink="/item">Items</a></b></li>
-                <li><b><a class="article-link" routerLink="/map">Map</a></b></li>
+                <li><b><a class="article-link" routerLink="/map/Aldrune">Map</a></b></li>
             </ul>
         </nav>
     </header>
