Created Leaflet Base Map with markers

--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -11,7 +11,9 @@
         </h3>
 
         <!-- Leaflet Map -->
-        <app-leaflet-map></app-leaflet-map>
+        <div class="mb-5">
+            <app-leaflet-map [map]="currentMap"></app-leaflet-map>
+        </div>
 
         <app-delete-toggle (deleteEvent)="deleteMap()"></app-delete-toggle>
     </article>
