--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -27,7 +27,7 @@
                 <div class="col-lg-3">
                     <div class="card my-3 h-87">
                         <div class="card-body d-flex justify-content-center align-items-center">
-                            <i class="fa fa-5x icon fa-plus-square-o" aria-hidden="true"></i> 
+                            <i class="fa fa-5x icon fa-plus-square-o" routerLink="create" aria-hidden="true"></i> 
                         </div>
                     </div>
                 </div>
