--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -19,9 +19,8 @@
 
 
         <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-            <formly-form [form]="form" [fields]="audioFileField" [model]="model"></formly-form>
             <button type="submit" class="btn btn-outline-secondary">Submit</button>
         </form>
     </article>
