Overhauled Form Generation in general
Now there's a proper formly service that generates typically used fields.
Further implemented a way to convert models into FormData objects. This is necessary for file-uploads which require submission with FormData objects.

--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
@@ -74,10 +74,12 @@
     <div class="my-3 py-3 px-4 card">
         <form [formGroup]="form" (ngSubmit)="createEncounter(model)" *ngIf="isEncounterCreateState && !isEncounterUpdateState">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
+            <button class="btn btn-secondary mr-3" (click)="toggleEncounterCreateState()">Cancel</button>
             <button type="submit" class="btn btn-outline-secondary">Submit</button>
         </form>         
         <form [formGroup]="form" (ngSubmit)="updateEncounter(model)" *ngIf="!isEncounterCreateState && isEncounterUpdateState">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
+            <button class="btn btn-secondary mr-3" (click)="toggleEncounterUpdateState()">Cancel</button>
             <button type="submit" class="btn btn-outline-secondary">Submit</button>
         </form>    
     </div>
