--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -47,7 +47,7 @@
                 <div *ngIf="activeModalState===constants.createState">
                     <form [formGroup]="form" (ngSubmit)="cl(constants.createSignal)" enctype="multipart/form-data">
                         <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-                        <formly-form [form]="form" [fields]="imageFileField" [model]="model"></formly-form>
+                        <!-- <formly-form [form]="form" [fields]="imageFileField" [model]="model"></formly-form> -->
                         <button type="submit" class="btn btn-outline-secondary">Submit</button>
                     </form>
                 </div>
