--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -10,7 +10,7 @@
         </div>
 
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="'/organization'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="'/sessionaudio'"></app-edit-toggle>
 
             <h2 class="text-center">
                 Uploading Session Audio File
