--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,35 +8,35 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Search Bar -->
-        <form class="input-group my-2 my-lg-0" (submit)="search()">
+        <form class="my-2 my-lg-0 flex-1" (submit)="search()">
             <div class="searchbar form-control">
                 <i class="fa fa-2x fa-search mr-2"></i>
                 <input class="search-input" type="search" name="search" [(ngModel)]="searchString" placeholder="Search Articles..." aria-label="Search">
             </div>
         </form>
         <!-- Nav Items -->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-5">
             <!-- Recent Updates -->
-            <li class="nav-item mr-3 ml-3">
-                <a routerLink="/recent-updates" class="button nav-link nav-link-text"> Recent Updates </a>
+            <li class="nav-item mx-2">
+                <a routerLink="/recent-updates" class="nav-link nav-link-text"> Recent Updates </a>
             </li>
             <!-- Rules -->
-            <li class="nav-item mr-3 ml-3">
-                <a routerLink="/rules" class="button nav-link"> 
+            <li class="nav-item mx-2">
+                <a routerLink="/rules" class="nav-link"> 
                     <span class="d-md-none nav-link-text mr-3">Rules</span> 
                     <i class="fa fa-book fa-2x" aria-hidden="true"></i>
                 </a>
             </li>
             <!-- Session Audio -->
-            <li class="nav-item mr-3 ml-3" routerLink="/sessionaudio">
-                <a class="button nav-link"> 
+            <li class="nav-item mx-2">
+                <a class="nav-link" routerLink="/sessionaudio"> 
                     <span class="d-md-none nav-link-text mr-3">Session Audio</span> 
                     <i class="fa fa-file-audio-o fa-2x" aria-hidden="true"></i> 
                 </a>
             </li>
             <!-- Log out -->
-            <li class="nav-item mr-3 ml-5">
-                <a routerLink="/rules" class="button nav-link"> 
+            <li class="nav-item mx-2">
+                <a routerLink="/rules" class="nav-link"> 
                     <span class="d-md-none nav-link-text mr-3">Logout</span> 
                     <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> 
                 </a>
