Finished Quote Gallery V1
It has now full CRUD functionality for Quotes, and CRD functionality for QuoteConnections

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -32,6 +32,9 @@
         [images]="this.character.images"
         ></app-image-gallery>
 
+        <!-- Quote -->
+        <app-quote-gallery [character]="character"></app-quote-gallery>
+
         <!-- Description -->
         <div class="mb-5">
             <app-textfield 
