Began implementing Login System with JWT Authentication

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,7 +36,7 @@
             </li>
             <!-- Log out -->
             <li class="nav-item mx-2">
-                <a routerLink="/rules" class="nav-link"> 
+                <a routerLink="/login" class="nav-link"> 
                     <span class="d-md-none nav-link-text mr-3">Logout</span> 
                     <i class="fa fa-sign-out fa-2x" aria-hidden="true"></i> 
                 </a>
