--- a/src/app/components/utility/image-gallery/image-gallery.component.scss
+++ b/src/app/components/utility/image-gallery/image-gallery.component.scss
@@ -52,7 +52,7 @@ div:hover .edit-image-buttons, div:hover .mouseoverVisible{
     padding: 0.5rem;
 }
 
-.fa-pencil-square-o:hover, .fa-arrow-left:hover, .fa-arrow-right:hover{
+.fa-pencil:hover, .fa-arrow-left:hover, .fa-arrow-right:hover{
     color: gray;
 }
 
