--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -1,66 +1,75 @@
-<div class="image-area mb-5">
-    <i [ngClass]="{'fa fa-arrow-left fa-2x mr-5': true, 'mouseoverVisible': !isLastImage(), 'deactivated-icon': isLastImage()}" 
+<!-- Display State -->
+<div class="image-area mb-5 icon-container" *ngIf="componentState===constants.displayState">
+    <!-- Prior Image Arrow -->
+    <i [ngClass]="{'fa fa-arrow-left fa-2x mr-5 icon': true, 'mouseoverVisible': !isLastImage(), 'deactivated-icon': isLastImage()}" 
     aria-hidden="true"
     (click)="decreaseVisibleImageIndex()"></i>
 
+    <!-- Image Container -->
     <div class="image-container">
+
+        <!-- Images -->
         <a [href]="image.image"
         *ngFor="let image of images; let i = index"
         (keydown)="changeMainImage($event)"
-        [ngClass]="{'main-image': i === visibleImageIndex, 'side-image': i !== visibleImageIndex}"
-        >
+        [ngClass]="{'main-image': i === visibleImageIndex, 'side-image': i !== visibleImageIndex}">
             <img title="None" class="gallery-image" [src]="constants.wikiUrl + image.image" alt="">
         </a>
-    
+
+        <!-- Image Edit/Delete/Create Buttons -->
         <div class="edit-image-buttons">
-            <i class="fa fa-plus-square-o fa-2x" aria-hidden="true" (click)="showCreateModal(requestModal)"></i>
-            <!-- <i class="fa fa-pencil-square-o fa-2x" aria-hidden="true" (click)="showUpdateModal(requestModal)"></i> -->
-            <i 
-            [ngClass]="{'fa fa-trash fa-2x': true, 'd-none': isLastImage()}"
-            aria-hidden="true"
-            (click)="showDeleteModal(requestModal)"
-            ></i>
+            <i class="fa fa-plus-square-o fa-2x icon" aria-hidden="true" (click)="toggleCreateState()"></i>
+            <i class="fa fa-pencil fa-2x icon" aria-hidden="true" (click)="toggleUpdateState()"></i>
+            <i [ngClass]="{'fa fa-trash fa-2x icon': true, 'd-none': isLastImage()}" aria-hidden="true" (click)="toggleDeleteState()"></i>
         </div>
+
     </div>
 
-    <i [ngClass]="{'fa fa-arrow-right fa-2x ml-5': true, 'mouseoverVisible': !isLastImage(), 'deactivated-icon': isLastImage()}" 
+    <!-- Next Image Arrow -->
+    <i [ngClass]="{'fa fa-arrow-right fa-2x ml-5 icon': true, 'mouseoverVisible': !isLastImage(), 'deactivated-icon': isLastImage()}" 
     aria-hidden="true" 
     (click)="incrementVisibleImageIndex()"></i>
+</div>
 
-    <!-- Modal Templates for Image Manipulation -->
-    <ng-template #requestModal let-cl="close" let-di="dismiss">  
-        <div class="modal-content"> 
-            <!-- Heading -->
-            <div class="modal-header">  
-                <h5 class="modal-title">
-                    <span *ngIf="activeModalState===constants.createState">Add</span>
-                    <!-- <span *ngIf="activeModalState===constants.updateState">Change</span> -->
-                    Image
-                </h5>
-                <button type="button" class="close" (click)="di()">  
-                    <i class="fa fa-times"></i>
-                </button> 
-            </div>  
-            <!-- Body -->
-            <div class="modal-body">
+<!-- Create/Update Image Form -->
+<div *ngIf="componentState === constants.createState || componentState === constants.updateState" class="card p-3 m-2">
+    <!-- Create/Update Heading -->
+    <h5 class="text-center">
+        <span *ngIf="componentState === constants.createState">Creating Image</span>
+        <span *ngIf="componentState === constants.updateState">Updating this image:</span>
+    </h5>
 
-                <div *ngIf="activeModalState===constants.createState">
-                    <form [formGroup]="form" (ngSubmit)="cl(constants.createSignal)" enctype="multipart/form-data">
-                        <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-                        <!-- <formly-form [form]="form" [fields]="imageFileField" [model]="model"></formly-form> -->
-                        <button type="submit" class="btn btn-outline-secondary">Submit</button>
-                    </form>
-                </div>
+    <!-- Update Image -->
+    <div *ngIf="componentState === constants.updateState" class="image-container">
+        <span class="main-image">
+            <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
+        </span>
+    </div>
 
-                <p *ngIf="activeModalState===constants.deleteState">Do you really want to delete <strong>{{ images[visibleImageIndex].name }}</strong> ?</p>  
-            </div>  
-    
-            <div class="modal-footer"> 
-                <button type="button" class="btn btn-secondary" (click)="di(l)"> Cancel </button> 
-                <button type="button" *ngIf="activeModalState===constants.deleteState" class="btn btn-outline-danger" (click)="cl(constants.deleteSignal)"> Delete </button> 
-                <button type="button" *ngIf="activeModalState===constants.createState" class="btn btn-outline-success" (click)="cl(constants.createSignal)"> Save </button> 
-                <!-- <button type="button" *ngIf="activeModalState===constants.updateState" class="btn btn-outline-info" (click)="cl(constants.updateSignal)"> Update </button>  -->
-            </div> 
-    
-        </div>  
-    </ng-template>
+    <!-- Create/Update Form -->
+    <form (ngSubmit)="onSubmit()" enctype="multipart/form-data">
+        <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
+        <button class="btn btn-dark mr-3" (click)="componentState = constants.displayState">Cancel</button>
+        <button type="submit" class="btn btn-outline-dark">Submit</button>
+    </form>
+</div>
+
+<!-- Delete "Form" -->
+<div *ngIf="componentState === constants.deleteState" class="card p-3 m-2">
+    <!-- Delete Heading -->
+    <h5 class="text-center">Deleting this image:</h5>
+
+    <!-- Delete Image  -->
+    <div class="image-container">
+        <span class="main-image">
+            <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
+        </span>
+    </div>
+
+    <!-- Delete Question -->
+    <div class="text-center">
+        Do you really want to delete this image?
+        <button class="btn btn-outline-dark mr-3" (click)="componentState=constants.displayState"> No </button>
+        <button class="btn btn-outline-danger" (click)="deleteCurrentMainImage()"> Yes </button>
+    </div>
+</div>
