--- a/src/styles.scss
+++ b/src/styles.scss
@@ -407,8 +407,12 @@ label{
 blockquote{
 	border-left: solid 4px #ffffff;
     font-style: italic;
-    margin: 0 0 2rem 0;
+    margin: 0;
     padding: 0.5rem 0 0.5rem 2rem;
+}
+
+blockquote p{
+	margin-bottom: 0;
 }
 
 blockquote strong{
