--- a/src/app/components/utility/quote-gallery/quote-gallery.component.scss
+++ b/src/app/components/utility/quote-gallery/quote-gallery.component.scss
@@ -26,3 +26,7 @@
 .badge.badge-secondary{
     padding: 0.35rem;
 }
+
+blockquote:hover ~ .icon-container, .icon-container:hover{
+    opacity: 1;
+}
