--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -67,9 +67,9 @@
     </div>
 
     <!-- Delete Question -->
-    <div class="text-center">
+    <div class="text-center mt-3">
         Do you really want to delete this image?
-        <button class="btn btn-outline-dark mr-3" (click)="componentState=constants.displayState"> No </button>
+        <button class="btn btn-dark mr-3" (click)="componentState=constants.displayState"> No </button>
         <button class="btn btn-outline-danger" (click)="deleteCurrentMainImage()"> Yes </button>
     </div>
 </div>
