Minor Improvements/UI Changes of buttons

--- a/src/app/components/articles/encounter/encounter.component.html
+++ b/src/app/components/articles/encounter/encounter.component.html
@@ -47,7 +47,7 @@
             (updateText)="onEncounterUpdate($event)"
             ></app-textfield>
         </div>
-
+        <button class="btn btn-dark mr-3" routerLink="">Back To Frontpage</button>
         <app-delete-toggle (deleteEvent)="deleteEncounter()"></app-delete-toggle>
 
     </article>
