--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -63,7 +63,7 @@
         <a 
         *ngIf="location.parent_location_details.name !== constants.NONE_STRING"
         routerLink="/location/{{location.parent_location_details.parent_location}}/{{location.parent_location_details.name}}"
-        class="btn btn-outline-secondary">
+        class="btn btn-secondary">
             Back to {{location.parent_location_details.name}}
         </a>
     </article>
