--- a/src/app/components/articles/recently-updated-article/recently-updated-article.component.html
+++ b/src/app/components/articles/recently-updated-article/recently-updated-article.component.html
@@ -17,7 +17,7 @@
                 </div>
             </a>
         </div>
-
+        <div class="btn btn-secondary" routerLink="">Back To Frontpage</div>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
