--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -11,7 +11,7 @@
                 <div [innerHTML]="rule.description"></div>
             </div>
         </div>
-
+        <div class="btn btn-secondary" routerLink="">Back To Frontpage</div>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
