--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -58,7 +58,7 @@
         <!-- Delete Article? -->
         <app-delete-toggle [deleteMessage]="'Delete '+character.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
 
-        <a routerLink=".." class="btn btn-outline-secondary">Back to Characters</a>
+        <a routerLink=".." class="btn btn-secondary">Back to Characters</a>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
