--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -20,7 +20,7 @@
 
         <app-delete-toggle [deleteMessage]="'Delete Diaryentry?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
 
-        <a routerLink="../../.." class="btn btn-outline-secondary">Back to Diaryentries</a>
+        <a routerLink="../../.." class="btn btn-secondary">Back to Diaryentries</a>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
