--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -29,10 +29,10 @@
 
         <app-delete-toggle [deleteMessage]="'Delete '+item.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
 
-        <a routerLink="/item" class="btn btn-outline-secondary mr-1">Back to Items</a>
+        <a routerLink="/item" class="btn btn-secondary mr-1">Back to Items</a>
         <a 
         *ngIf="item.owner_details"
-        routerLink="/character/{{item.owner_details.name}}" class="btn btn-outline-secondary">Back to {{item.owner_details.name}}</a>
+        routerLink="/character/{{item.owner_details.name}}" class="btn btn-secondary">Back to {{item.owner_details.name}}</a>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
