--- a/src/app/components/articles/marker-map-create/marker-map-create.component.html
+++ b/src/app/components/articles/marker-map-create/marker-map-create.component.html
@@ -6,7 +6,8 @@
         <!-- Form -->
         <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-            <button type="submit" class="btn btn-outline-secondary">Submit</button>
+            <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
+            <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
