--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -66,6 +66,7 @@
             </div>
             
         </div>
+        <div class="btn btn-secondary" routerLink="">Back To Frontpage</div>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
