--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -34,7 +34,7 @@
             </div>
 
         </div>
-        <div class="btn btn-secondary" routerLink="">Back To Frontpage</div>
+        <div class="mt-5 btn btn-secondary" routerLink="">Back To Frontpage</div>
     </article>
     <!-- Loading Spinner -->
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
